<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#81d4fa">

    <Button
        android:id="@+id/btn_nivel_basico"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/circle_background"
        android:drawableTop="@mipmap/ic_nivel_basico"
        android:gravity="center"
        android:text="@string/basico"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_nivel_medio"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/circle_background"
        android:drawableTop="@mipmap/ic_nivel_medio"
        android:gravity="center"
        android:text="@string/medio"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_nivel_avanzado"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/circle_background"
        android:drawableTop="@mipmap/ic_nivel_avanzado"
        android:gravity="center"
        android:text="@string/avanzado"
        android:textAlignment="center"
        android:textAllCaps="false" />

</LinearLayout>